--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "borrow-sys",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": "D19",
+  "description": "Borrowing admin-panel",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -21,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angularfire2": "^2.0.0-beta.8",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "firebase": "^3.9.0",
     "rxjs": "^5.1.0",
