--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "firebase": "^3.9.0",
     "flash-messenger": "^1.0.6",
+    "ng2-img-cropper": "^0.8.8",
     "ng2-opd-popup": "^1.1.21",
     "ng2-popups": "^1.1.7",
     "rxjs": "^5.1.0",
