--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.0.0",
     "angular-2-dropdown-multiselect": "^1.4.2",
     "angular2-flash-messages": "^1.0.8",
+    "angular2-modal": "^3.0.1",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.9.0",
